    (according to the OGC reference model)
  * Renamed openfluid-engine command line program to openfluid
  * Updated and improved data generators
  * Added CMake OpenFLUID module
  * Added CMake macros for easier build of simulators and observers
  * Redesigned and improved simulators signatures macros
  * Redesigned simulators C++ class for robustness improvement
  * Provided new examples projects, with easy access from OpenFLUID-Builder  
  * Redesigned model and monitoring tabs in OpenFLUID-Builder
  * Updated binary names of OpenFLUID plugins (simulators and observers)
  * Improved OpenFLUID plugins recognition system
  * Removed pass-by-pointer values in OPENFLUID_* primitives
  * Added OPENFLUID_* primitives for accessing variables in many ways
  * Improved checking of primitives usage regarding the current 
    simulation stage 
  * Added observers and datasets as packages for OpenFLUID-market deployment
    system
  * Switched to version 3 of the Boost filesystem library  
  * Deeply refactored OpenFLUID source code, with many internal improvements
  * Improved internal test system
  * Fixed bugs



1.7.2

  * Added ROpenFLUID package for using OpenFLUID within the GNU R environment
  * Added improved macros for spatial units loops, as a preview of future
    releases
  * Improved management of simulation functions plugins
  * Refactored pkg-config configuration files, now splitted into 
    openfluid, openfluid-gui and openfluid-other for better build configuration
    of simulation functions and builder extensions 
  * Improved CMake configuration for RelWithDebInfo build type
  * Fixed various bugs : external call of GNUplot, duplicate layers in MapView, 
    output files headers



1.7.1

  * Added map view component in OpenFLUID-Builder, for spatial geometry
    vizualization
  * Added datastore system for unstructured or complex data
    (e.g. cartographic layers). This system should be extended
    in future releases 