@@ -1,0 +1,8 @@
+<?xml version="1.0" standalone="yes"?>
+<openfluid>
+  <model>
+
+    <simulator ID="tests.fakesimulator" />
+    
+  </model>
+</openfluid>
