@@ -1,0 +1,10 @@
+<?xml version="1.0" standalone="yes"?>
+<openfluid>
+  <monitoring>
+
+    <observer ID="tests.exceptions">
+      <param name="part" value="initparams" />
+    </observer>
+    
+  </monitoring>
+</openfluid>
