@@ -17,14 +17,17 @@
   * Added CMake macros for easier build of simulators and observers
   * Redesigned and improved simulators signatures macros
   * Redesigned simulators C++ class for robustness improvement
-  * Provided new examples projects, with easy access from OpenFLUID-Builder  
+  * Provided new examples projects, with easy access from OpenFLUID-Builder
+  * Provided OpenFLUID-Builder extensions for spatial graph view 
+    and spatial data import
   * Redesigned model and monitoring tabs in OpenFLUID-Builder
   * Updated binary names of OpenFLUID plugins (simulators and observers)
-  * Improved OpenFLUID plugins recognition system
+  * Improved OpenFLUID plugins recognition and management system
   * Removed pass-by-pointer values in OPENFLUID_* primitives
   * Added OPENFLUID_* primitives for accessing variables in many ways
   * Improved checking of primitives usage regarding the current 
     simulation stage 
+  * Updated standard fields names for external spatial data  
   * Added observers and datasets as packages for OpenFLUID-market deployment
     system
   * Switched to version 3 of the Boost filesystem library  
